Fix the paths in the nav bar.

--- a/Account.html
+++ b/Account.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">ProfScope</div>
         <nav>
-          <a href="#">Explore</a>
+          <a href="/">Explore</a>
           <a href="SubmitReview.html">Submit Review</a>
           <a href="Account.html">Account</a>
           <a href="Login.html">Login</a>
