--- a/Login.html
+++ b/Login.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
-
+<style>
+    .form-section{
+        padding:2rem;
+    }
+</style>
 <body>
     <header>
         <div class="logo">ProfScope</div>
