Added reviews to the website.

--- a/SubmitReview.html
+++ b/SubmitReview.html
@@ -10,10 +10,14 @@
     .form-section{
         padding:2rem;
     }
+    .logo, a {
+        text-decoration: none;
+        color: white;
+    }
 </style>
 <body>
     <header>
-        <div class="logo">ProfScope</div>
+        <div class="logo"><a href="/">ProfScope</a></div>
         <nav>
           <a href="/">Explore</a>
           <a href="SubmitReview.html">Submit Review</a>
