--- a/Account.html
+++ b/Account.html
@@ -7,9 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .logo, a {
+        text-decoration: none;
+        color: white;
+    }
+  </style>
 <body>
     <header>
-        <div class="logo">ProfScope</div>
+        <div class="logo"><a href="/">ProfScope</a></div>
         <nav>
           <a href="/">Explore</a>
           <a href="SubmitReview.html">Submit Review</a>
