--- a/Login.html
+++ b/Login.html
@@ -10,12 +10,16 @@
     .form-section{
         padding:2rem;
     }
+    .logo, a {
+        text-decoration: none;
+        color: white;
+    }
 </style>
 <body>
     <header>
-        <div class="logo">ProfScope</div>
+        <div class="logo"><a href="/">ProfScope</a></div>
         <nav>
-          <a href="/">Explore</a>
+          <a href="Explore.html">Explore</a>
           <a href="SubmitReview.html">Submit Review</a>
           <a href="Account.html">Account</a>
           <a href="Login.html">Login</a>
