Fixed the explore page.

--- a/Account.html
+++ b/Account.html
@@ -17,7 +17,7 @@
     <header>
         <div class="logo"><a href="/">ProfScope</a></div>
         <nav>
-          <a href="/">Explore</a>
+          <a href="Explore.html">Explore</a>
           <a href="SubmitReview.html">Submit Review</a>
           <a href="Account.html">Account</a>
           <a href="Login.html">Login</a>
