--- a/Explore.html
+++ b/Explore.html
@@ -16,12 +16,11 @@
   <header>
     <div class="logo"><a href="/">ProfScope</a></div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="explore.html">Explore</a>
-      <a href="submit.html">Submit Review</a>
-      <a href="account.html">Account</a>
-      <a href="login.html">Login</a>
-    </nav>
+        <a href="Explore.html">Explore</a>
+        <a href="SubmitReview.html">Submit Review</a>
+        <a href="Account.html">Account</a>
+        <a href="Login.html">Login</a>
+      </nav>
   </header>
 
   <section class="section">
