--- a/SubmitReview.html
+++ b/SubmitReview.html
@@ -19,10 +19,11 @@
     <header>
         <div class="logo"><a href="/">ProfScope</a></div>
         <nav>
-          <a href="/">Explore</a>
-          <a href="SubmitReview.html">Submit Review</a>
-          <a href="Account.html">Account</a>
-          <a href="Login.html">Login</a>
+            <a href="Explore.html">Explore</a>
+            <a href="SubmitReview.html">Submit Review</a>
+            <a href="Account.html">Account</a>
+            <a href="Login.html">Login</a>
+          </nav>
         </nav>
       </header>
     <h2>Submit a Review</h2>
