--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
   <header>
     <div class="logo">ProfScope</div>
     <nav>
-      <a href="#">Explore</a>
-      <a href="SubmitReview.html">Submit Review</a>
-      <a href="Account.html">Account</a>
-      <a href="Login.html">Login</a>
-    </nav>
+        <a href="Explore.html">Explore</a>
+        <a href="SubmitReview.html">Submit Review</a>
+        <a href="Account.html">Account</a>
+        <a href="Login.html">Login</a>
+      </nav>
   </header>
 
   <section class="hero">
