Adding the favicon to the website.

--- a/Explore.html
+++ b/Explore.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reviews - ProfScope</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="profscope_favicon.ico">
   <style>
     .logo, a {
         text-decoration: none;
