--- a/SubmitReview.html
+++ b/SubmitReview.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="profscope_favicon.ico">
 <style>
     .form-section{
         padding:2rem;
