--- a/Account.html
+++ b/Account.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<style>
-    .logo, a {
-        text-decoration: none;
-        color: white;
+  </head>
+  <link rel="icon" type="image/x-icon" href="profscope_favicon.ico" />
+  <style>
+    .logo,
+    a {
+      text-decoration: none;
+      color: white;
     }
   </style>
-<body>
+  <body>
     <header>
-        <div class="logo"><a href="/">ProfScope</a></div>
-        <nav>
-          <a href="Explore.html">Explore</a>
-          <a href="SubmitReview.html">Submit Review</a>
-          <a href="Account.html">Account</a>
-          <a href="Login.html">Login</a>
-        </nav>
-      </header>
-
+      <div class="logo"><a href="/">ProfScope</a></div>
+      <nav>
+        <a href="Explore.html">Explore</a>
+        <a href="SubmitReview.html">Submit Review</a>
+        <a href="Account.html">Account</a>
+        <a href="Login.html">Login</a>
+      </nav>
+    </header>
 
     <section class="section">
-        <h2>Account</h2>
-        <p><strong>Maya Rodriguez</strong><br />maya.rodriguez@example.com</p>
-        <button>Edit Profile</button>
-    
-        <h3>My Reviews</h3>
-        <div class="review-card">
-          <div>
-            <strong>John Smith</strong><br>
-            <small>CS101</small>
-          </div>
-          <div>
-            <p>Teaching: ★★★★★</p>
-            <p>Grading: ★★★★★</p>
-            <p>Workload: ★★★★☆</p>
-          </div>
-          <button>Delete</button>
+      <h2>Account</h2>
+      <p><strong>Maya Rodriguez</strong><br />maya.rodriguez@example.com</p>
+      <button>Edit Profile</button>
+
+      <h3>My Reviews</h3>
+      <div class="review-card">
+        <div>
+          <strong>John Smith</strong><br />
+          <small>CS101</small>
         </div>
-      </section>
-</body>
+        <div>
+          <p>Teaching: ★★★★★</p>
+          <p>Grading: ★★★★★</p>
+          <p>Workload: ★★★★☆</p>
+        </div>
+        <button>Delete</button>
+      </div>
+    </section>
+  </body>
 </html>
