--- a/Login.html
+++ b/Login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="icon" type="image/x-icon" href="profscope_favicon.ico">
 <link rel="stylesheet" href="style.css">
 <style>
     .form-section{
